--- a/search/front/index.html
+++ b/search/front/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search</title>
+    <title>Spotify Search</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Search your song</h1>
+        <div class="search-bar">
+            <input id="searchInput" type="text" placeholder="Enter your query">
+            <button id="searchButton">Search</button>
+        </div>
+        <ul id="results"></ul>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
