--- a/search/front/index.html
+++ b/search/front/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>Spotify Search</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Search your song</h1>
-        <div class="search-bar">
-            <input id="searchInput" type="text" placeholder="Enter your query">
-            <button id="searchButton">Search</button>
+        <h1 class="title">Qual é aquela mesmo? 🤔</h1>
+        <div class="search-container">
+            <div class="search-bar">
+                <input id="searchInput" type="text" placeholder="">
+            </div>
         </div>
         <ul id="results"></ul>
     </div>
