--- a/search/front/index.html
+++ b/search/front/index.html
@@ -23,6 +23,11 @@
             </div>
         </div>
         <ul id="results"></ul>
+        <div id="pagination">
+            <button id="prevPage">Voltar</button>
+            <span id="currentPage">Página 1</span>
+            <button id="nextPage">Avançar</button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
