--- a/search/front/index.html
+++ b/search/front/index.html
@@ -29,6 +29,6 @@
             <button id="nextPage">Avançar</button>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
