--- a/search/front/index.html
+++ b/search/front/index.html
@@ -28,6 +28,9 @@
             <span id="currentPage">Página 1</span>
             <button id="nextPage">Avançar</button>
         </div>
+        <div class="lyrics-container">
+            <div class="lyrics"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
